--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
             </form>
         </div>
     </main>
-    <script src="./script/script.js"></script>
+    <script src="./script/bordervalidation.js" defer></script>
+    <script src="./script/script.js" defer></script>
     <script src="./script/iconValidation.js" defer></script>
+
+
+    
     
 </body>
 </html>
